# axiom

./: .dockerignore  DEPLOYMENT.md  Dockerfile  Dockerfile.frontend  README.md  deploy.sh  frontend.py  main.py  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/v1/: routes.py
app/core/: config.py  dependencies.py  logging.py
app/prompts/: system_prompt.md
app/schemas/: debate.py
app/services/: llm_service.py
k8s/: configmap.yaml  deployment.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  kustomization.yaml  secret.yaml.template  service.yaml
